@@ -1830,6 +1830,9 @@ struct EditorDeleteColor
 };
 
 #define EDITOR_COLOR_NORMAL_PRIORITY 0x80000000U
+#ifdef FAR_USE_INTERNALS
+#define EDITOR_COLOR_SELECTION_PRIORITY 0xFFFFFFFFU
+#endif // END FAR_USE_INTERNALS
 
 struct EditorSaveFile
 {
